# arena-combat

./: .gitignore  BUILD_SETUP.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  METHODOLOGY.md  PROGRESS.md  README.md  arena_combat_gdd.md  run.bat  tech_stack_decision.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
assets/shaders/: grid.wgsl  mesh.wgsl  skeleton.wgsl
debug/: BUG_001_METHODOLOGY.md  BUG_001_investigation.md  BUG_001_player_rotation.md  DEVELOPMENT_RULES.md  LOGGING.md  PATHS.md  SESSION_2025-12-14.md
docs/: 3D_SPACE_UNDERSTANDING.md  ACTIVE_RAGDOLL_RESEARCH.md  ANIMATION_CODE_REVIEW.md  BIOMECHANICS_AND_OPTIMIZATION.md  HUMANOID_ANIMATION_RESEARCH.md  HUMAN_ANATOMY_REFERENCE.md  RAGDOLL_EXPERIMENTS_LOG.md  RESEARCH_INDEX.md  SKELETAL_ANIMATION_SYSTEM.md  SKELETON_PROPORTIONS.md  TAPERED_LIMBS_RESEARCH.md
src/: debug_log.rs  fps_counter.rs  main.rs
src/camera/: camera.rs  mod.rs
src/combat/: hitbox.rs  mod.rs
src/enemy/: mod.rs
src/input/: input_state.rs  mod.rs
src/physics/: mod.rs  muscle.rs  ragdoll.rs  skeleton.rs
src/player/: mod.rs  player.rs
src/rendering/: grid.rs  mesh.rs  mod.rs  renderer.rs  screenshot.rs  skeleton_renderer.rs
src/time/: game_time.rs  mod.rs
src/transform/: mod.rs  transform.rs
