[package]
name = "arena_combat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Window management and input
winit = "0.30"

# Graphics (wgpu for cross-platform rendering)
# 24.0 has critical D3D12 resource state transition fixes
wgpu = "24.0"

# Math library (vectors, matrices)
glam = { version = "0.29", features = ["serde"] }

# Data conversion for GPU (safe byte casting)
bytemuck = { version = "1.14", features = ["derive"] }

# Async runtime (needed for wgpu)
pollster = "0.4"

# Logging
env_logger = "0.11"
log = "0.4"

# Lazy static
once_cell = "1.19"

# Physics engine (for ragdoll/muscle simulation)
rapier3d = "0.22"

# Image processing (for screenshots)
image = "0.25"
